# euclidean-rhythms

./: .gitignore  .gitmodules  ControlPortGenerator.scala  README.md  meson.build  ui tookits recommended by x42.md  using meson in clion.md
.github/workflows/: build.yml
environments/: linux64.ini  win32.ini
include/: euclidean.h  lv2_uris.h  meson.build  plugin.h
src/: euclidean.c  euclidean_algorithms.c  meson.build
src/lv2ttl/: euclidean.ttl.in  manifest.ttl.in
src/plugins/: plugin-lv2.c  plugin-ui-gtk.c  plugin-ui-lsp-tk.c  plugin-ui.c  plugin.c  plugin_lv2.c  plugin_ui.cpp
src/test/: test_euclidean_algorithm.c
subprojects/: BWidgets.wrap
test/: meson.build  test_euclidean_algorithm.c
