# Unit tests
test_euclidean_algorithm = executable('test_euclidean', 'test_euclidean_algorithm.c',
                                      include_directories: inc,
                                      link_with: euclideanlib)
test('test the euclidean algorithm implementation', test_euclidean_algorithm)